src/test/ui/const-generics/const_evaluatable_checked/feature-gate-const_evaluatable_checked.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/feature-gate-const_evaluatable_checked.rs:6:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to previous error

